// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ButtonRow /> should match snapshots 1`] = `
<div
  className="btn-row"
>
  <Button
    flat={true}
    focusable={true}
    label="Add with Identifier"
    onClick={[Function]}
    type="button"
  />
  <Button
    disabled={true}
    flat={true}
    focusable={true}
    label="Search PubMed"
    onClick={[Function]}
    type="button"
  />
  <span
    className="separator"
  />
  <ToggleSwitch
    checked={false}
    disabled={false}
    onChange={[Function]}
    tooltip={
      Object {
        "position": "left",
        "text": "Insert citation inline",
      }
    }
  />
  <Button
    focusable={true}
    form="add-reference"
    label="Add Reference"
    primary={true}
    type="submit"
  />
  <style
    jsx={true}
  >
    
                        .btn-row {
                            display: flex;
                            padding: 10px;
                            align-items: center;
                            background: #f5f5f5;
                            box-shadow: 0 -1px 0 rgba(16, 22, 26, .10);
                            border-radius: 0 0 2px 2px;
                            margin: 0;
                            justify-content: space-between;
                        }
                        span {
                            border-right: solid 2px rgba(0, 0, 0, 0.12);
                            height: 30px;
                            display: inline-block;
                        }
                    
  </style>
</div>
`;

exports[`<ButtonRow /> should match snapshots 2`] = `
<div
  className="btn-row"
>
  <Button
    flat={true}
    focusable={true}
    label="Add Manually"
    onClick={[Function]}
    type="button"
  />
  <Button
    disabled={false}
    flat={true}
    focusable={true}
    label="Search PubMed"
    onClick={[Function]}
    type="button"
  />
  <span
    className="separator"
  />
  <ToggleSwitch
    checked={false}
    disabled={false}
    onChange={[Function]}
    tooltip={
      Object {
        "position": "left",
        "text": "Insert citation inline",
      }
    }
  />
  <Button
    focusable={true}
    form="add-reference"
    label="Add Reference"
    primary={true}
    type="submit"
  />
  <style
    jsx={true}
  >
    
                        .btn-row {
                            display: flex;
                            padding: 10px;
                            align-items: center;
                            background: #f5f5f5;
                            box-shadow: 0 -1px 0 rgba(16, 22, 26, .10);
                            border-radius: 0 0 2px 2px;
                            margin: 0;
                            justify-content: space-between;
                        }
                        span {
                            border-right: solid 2px rgba(0, 0, 0, 0.12);
                            height: 30px;
                            display: inline-block;
                        }
                    
  </style>
</div>
`;
